--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
         <div class="breaking-story-wrapper">
           <div class="braking-story-content">
             <h3 class="breaking-story-headline">BREAKING NEWS</h3>
+
             <div class="breaking-story breaking-first">
               <div class="breaking-text-wrapper">
                 <h3 class="breaking-story-title">
@@ -133,6 +134,18 @@
                 <img src="pictures/trump.jpg" alt="trump" />
               </figure>
             </div>
+            <div class="breaking-story breaking-third">
+              <div class="breaking-text-wrapper">
+                <h3 class="breaking-story-title">
+                  Major discovery by NASA on Mars
+                </h3>
+                <p class="breaking-time">52 minutes ago</p>
+              </div>
+              <figure class="breaking-story-picture">
+                <img src="pictures/Perseverence.jpg" alt="Mars" />
+              </figure>
+            </div>
+            <h3 class="breaking-story-headline">BREAKING NEWS</h3>
           </div>
         </div>
         <!--BREAKING NEWS CONTENT-->
