--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <h1 class="page-title">World Magazine</h1>
         <nav class="top-nav-container">
           <ul>
-            <li><a>Search</a></li>
+            <li>
+              <a class="search-button search">Search</a>
+            </li>
             <li><a>Log In</a></li>
             <li><a>Magazine</a></li>
             <li><a>Newsletter</a></li>
@@ -151,5 +153,6 @@
         <!--BREAKING NEWS CONTENT-->
       </div>
     </main>
+    <footer></footer>
   </body>
 </html>
