--- a/politics.html
+++ b/politics.html
@@ -21,11 +21,11 @@
         </nav>
         <nav class="bottom-nav-container">
           <ul>
-            <li><a>HOME</a></li>
-            <li><a>SPORTS</a></li>
-            <li><a>CULTURE</a></li>
-            <li><a>POLITICS</a></li>
-            <li><a>TECH</a></li>
+            <li><a href="/index.html">HOME</a></li>
+            <li><a href="/sports.html">SPORTS</a></li>
+            <li><a href="/culture.html">CULTURE</a></li>
+            <li><a href="/politics.html">POLITICS</a></li>
+            <li><a href="/tech.html">TECH</a></li>
           </ul>
         </nav>
       </div>
