--- a/index.html
+++ b/index.html
@@ -32,127 +32,131 @@
         </nav>
       </div>
     </header>
-    <main>
-      <div class="site-wrapper">
-        <!--MAIN CONTENT-->
-        <div class="main-content-wrapper">
-          <div class="main-story-content first-story">
-            <div class="text-story">
-              <h2 class="story-title">
-                Ukraine keeps getting attacked, Especially in the eastern
-                region.
-              </h2>
-              <span class="story-info">
-                Late last night eastern parts of Ukraine got shelled continously
-                for several hours. "Every day is a struggle, we need more
-                weapons ammo and supplies" -- Zelensky</span
-              >
-              <div class="author-catagory-info">
-                <span class="catagory-info"
-                  ><li><a href="#POLITICS">Politics</a></li></span
+    <div class="scrollbox">
+      <main>
+        <div class="site-wrapper">
+          <!--MAIN CONTENT-->
+          <div class="main-content-wrapper">
+            <div class="main-story-content first-story">
+              <div class="text-story">
+                <h2 class="story-title">
+                  Ukraine keeps getting attacked, Especially in the eastern
+                  region.
+                </h2>
+                <span class="story-info">
+                  Late last night eastern parts of Ukraine got shelled
+                  continously for several hours. "Every day is a struggle, we
+                  need more weapons ammo and supplies" -- Zelensky</span
                 >
-                <span class="story-author">By: Mark Test</span>
+                <div class="author-catagory-info">
+                  <span class="catagory-info"
+                    ><li><a href="#POLITICS">Politics</a></li></span
+                  >
+                  <span class="story-author">By: Mark Test</span>
+                </div>
               </div>
+              <figure class="story-picture">
+                <img src="pictures/putin.jpg" alt="putin" />
+                <figcaption class="story-caption">Vladimir Putin</figcaption>
+              </figure>
             </div>
-            <figure class="story-picture">
-              <img src="pictures/putin.jpg" alt="putin" />
-              <figcaption class="story-caption">Vladimir Putin</figcaption>
-            </figure>
-          </div>
-          <div class="main-story-content second-story">
-            <div class="text-story">
-              <h2 class="story-title">
-                Suspicion of election fraud in Nicaragua
-              </h2>
-              <span class="story-info">
-                Potentially the biggest political scandal in the history of
-                Nicaragua. The Nicaraguan people have taken to the streets to
-                protest. "It's time for Nicaragua to become the free democracy
-                its people desire"
-              </span>
-              <div class="author-catagory-info">
-                <span class="catagory-info"
-                  ><li><a href="#POLITICS">Politics</a></li></span
-                >
-                <span class="story-author">By: Mark Test</span>
+            <div class="main-story-content second-story">
+              <div class="text-story">
+                <h2 class="story-title">
+                  Suspicion of election fraud in Nicaragua
+                </h2>
+                <span class="story-info">
+                  Potentially the biggest political scandal in the history of
+                  Nicaragua. The Nicaraguan people have taken to the streets to
+                  protest. "It's time for Nicaragua to become the free democracy
+                  its people desire"
+                </span>
+                <div class="author-catagory-info">
+                  <span class="catagory-info"
+                    ><li><a href="#POLITICS">Politics</a></li></span
+                  >
+                  <span class="story-author">By: Mark Test</span>
+                </div>
               </div>
+              <figure class="story-picture">
+                <img src="pictures/nicaragua.jpg" alt="Nicaragua president" />
+                <figcaption class="story-caption">Daniel Ortega</figcaption>
+              </figure>
             </div>
-            <figure class="story-picture">
-              <img src="pictures/nicaragua.jpg" alt="Nicaragua president" />
-              <figcaption class="story-caption">Daniel Ortega</figcaption>
-            </figure>
-          </div>
-          <div class="main-story-content third-story">
-            <div class="text-story">
-              <h2 class="story-title">
-                Spain beats England 1-0 in the finals of the world cup
-              </h2>
-              <span class="story-info"
-                >The womens world cup is over and Spain stands at the end as the
-                winner. Carmona scored an early goal for Spain and England never
-                found a way to turn the tables. "The determination and
-                dedication to play everyday, as hard as these girls has done for
-                the entire world cup is astonishing" -- Carlos Puyol
-              </span>
-              <div class="author-catagory-info">
-                <span class="catagory-info"
-                  ><li><a href="#SPORTS">Sports</a></li></span
-                >
-                <span class="story-author">By: Mark Test</span>
+            <div class="main-story-content third-story">
+              <div class="text-story">
+                <h2 class="story-title">
+                  Spain beats England 1-0 in the finals of the world cup
+                </h2>
+                <span class="story-info"
+                  >The womens world cup is over and Spain stands at the end as
+                  the winner. Carmona scored an early goal for Spain and England
+                  never found a way to turn the tables. "The determination and
+                  dedication to play everyday, as hard as these girls has done
+                  for the entire world cup is astonishing" -- Carlos Puyol
+                </span>
+                <div class="author-catagory-info">
+                  <span class="catagory-info"
+                    ><li><a href="#SPORTS">Sports</a></li></span
+                  >
+                  <span class="story-author">By: Mark Test</span>
+                </div>
               </div>
+              <figure class="story-picture">
+                <img src="pictures/spainteam.jpg" alt="Spain national team" />
+                <figcaption class="story-caption">
+                  Spain National Team
+                </figcaption>
+              </figure>
             </div>
-            <figure class="story-picture">
-              <img src="pictures/spainteam.jpg" alt="Spain national team" />
-              <figcaption class="story-caption">Spain National Team</figcaption>
-            </figure>
           </div>
-        </div>
-        <!--MAIN CONTENT-->
+          <!--MAIN CONTENT-->
 
-        <!--BREAKING NEWS CONTENT-->
-        <div class="breaking-story-wrapper">
-          <div class="braking-story-content">
-            <h3 class="breaking-story-headline">BREAKING NEWS</h3>
+          <!--BREAKING NEWS CONTENT-->
+          <div class="breaking-story-wrapper">
+            <div class="braking-story-content">
+              <h3 class="breaking-story-headline">BREAKING NEWS</h3>
 
-            <div class="breaking-story breaking-first">
-              <div class="breaking-text-wrapper">
-                <h3 class="breaking-story-title">
-                  Duplantis broke his own world record. again..
-                </h3>
-                <p class="breaking-time">10 minutes ago</p>
+              <div class="breaking-story breaking-first">
+                <div class="breaking-text-wrapper">
+                  <h3 class="breaking-story-title">
+                    Duplantis broke his own world record. again..
+                  </h3>
+                  <p class="breaking-time">10 minutes ago</p>
+                </div>
+                <figure class="breaking-story-picture">
+                  <img src="pictures/duplantis.jpg" alt="duplantis" />
+                </figure>
               </div>
-              <figure class="breaking-story-picture">
-                <img src="pictures/duplantis.jpg" alt="duplantis" />
-              </figure>
-            </div>
-            <div class="breaking-story breaking-second">
-              <div class="breaking-text-wrapper">
-                <h3 class="breaking-story-title">
-                  Trump charged with 420 counts of fraud
-                </h3>
-                <p class="breaking-time">25 minutes ago</p>
+              <div class="breaking-story breaking-second">
+                <div class="breaking-text-wrapper">
+                  <h3 class="breaking-story-title">
+                    Trump charged with 420 counts of fraud
+                  </h3>
+                  <p class="breaking-time">25 minutes ago</p>
+                </div>
+                <figure class="breaking-story-picture">
+                  <img src="pictures/trump.jpg" alt="trump" />
+                </figure>
               </div>
-              <figure class="breaking-story-picture">
-                <img src="pictures/trump.jpg" alt="trump" />
-              </figure>
-            </div>
-            <div class="breaking-story breaking-third">
-              <div class="breaking-text-wrapper">
-                <h3 class="breaking-story-title">
-                  Major discovery by NASA on Mars
-                </h3>
-                <p class="breaking-time">52 minutes ago</p>
+              <div class="breaking-story breaking-third">
+                <div class="breaking-text-wrapper">
+                  <h3 class="breaking-story-title">
+                    Major discovery by NASA on Mars
+                  </h3>
+                  <p class="breaking-time">52 minutes ago</p>
+                </div>
+                <figure class="breaking-story-picture">
+                  <img src="pictures/Perseverence.jpg" alt="Mars" />
+                </figure>
               </div>
-              <figure class="breaking-story-picture">
-                <img src="pictures/Perseverence.jpg" alt="Mars" />
-              </figure>
+              <h3 class="breaking-story-headline">BREAKING NEWS</h3>
             </div>
-            <h3 class="breaking-story-headline">BREAKING NEWS</h3>
           </div>
+          <!--BREAKING NEWS CONTENT-->
         </div>
-        <!--BREAKING NEWS CONTENT-->
-      </div>
-    </main>
-    <footer></footer>
+      </main>
+      <footer></footer>
+    </div>
   </body>
 </html>
