--- a/index.html
+++ b/index.html
@@ -110,6 +110,28 @@
               </figcaption>
             </figure>
           </div>
+          <div class="main-story-content fourth-story">
+            <div class="text-story">
+              <h2 class="story-title">Apples reveals their new VR-headset</h2>
+              <span class="story-info">
+                After years of speculation and delays, Apples Tim Cook has unveiled the new Apple VR-headset.
+                But one question remains, are customers still willing to pay premium prices for Apple products?
+                "It took longer then we expected but we are confident our customers will be more than satisfied with the
+                product"
+                -- Tim Cook.
+              </span>
+              <div class="author-catagory-info">
+                <span class="catagory-info">
+                  <li><a href="/tech.html">Tech</a></li>
+                </span>
+                <span class="story-author">By: Mark Test</span>
+              </div>
+            </div>
+            <figure class="story-picture">
+              <img src="pictures/apple.jpg" alt="apple">
+              <figcaption class="story-caption">Apples new VR-headset</figcaption>
+            </figure>
+          </div>
         </div>
         <!--MAIN CONTENT-->
 
