--- a/index.html
+++ b/index.html
@@ -42,14 +42,16 @@
         <div class="main-content-wrapper">
           <div class="main-story-content first-story">
             <div class="text-story">
-              <h2 class="story-title">
-                Ukraine keeps getting attacked, Especially in the eastern
-                region.
-              </h2>
-              <span class="story-info">
-                Late last night eastern parts of Ukraine got shelled
-                continously for several hours. "Every day is a struggle, we
-                need more weapons ammo and supplies" -- Zelensky</span>
+              <a class="site-navigator-anchor" href="/ukrainestory">
+                <h2 class="story-title">
+                  Ukraine keeps getting attacked, Especially in the eastern
+                  region.
+                </h2>
+                <span class="story-info">
+                  Late last night eastern parts of Ukraine got shelled
+                  continously for several hours. "Every day is a struggle, we
+                  need more weapons ammo and supplies" -- Zelensky</span>
+              </a>
               <div class="author-catagory-info">
                 <span class="catagory-info">
                   <li><a href="/politics.html">Politics</a></li>
@@ -62,17 +64,20 @@
               <figcaption class="story-caption">Vladimir Putin</figcaption>
             </figure>
           </div>
+
           <div class="main-story-content second-story">
             <div class="text-story">
-              <h2 class="story-title">
-                Suspicion of election fraud in Nicaragua
-              </h2>
-              <span class="story-info">
-                Potentially the biggest political scandal in the history of
-                Nicaragua. The Nicaraguan people have taken to the streets to
-                protest. "It's time for Nicaragua to become the free democracy
-                its people desire"
-              </span>
+              <a class="site-navigator-anchor" href="/nicaraguastory">
+                <h2 class="story-title">
+                  Suspicion of election fraud in Nicaragua
+                </h2>
+                <span class="story-info">
+                  Potentially the biggest political scandal in the history of
+                  Nicaragua. The Nicaraguan people have taken to the streets to
+                  protest. "It's time for Nicaragua to become the free democracy
+                  its people desire"
+                </span>
+              </a>
               <div class="author-catagory-info">
                 <span class="catagory-info">
                   <li><a href="/politics.html">Politics</a></li>
@@ -85,17 +90,20 @@
               <figcaption class="story-caption">Daniel Ortega</figcaption>
             </figure>
           </div>
+
           <div class="main-story-content third-story">
             <div class="text-story">
-              <h2 class="story-title">
-                Spain beats England 1-0 in the finals of the world cup
-              </h2>
-              <span class="story-info">The womens world cup is over and Spain stands at the end as
-                the winner. Carmona scored an early goal for Spain and England
-                never found a way to turn the tables. "The determination and
-                dedication to play everyday, as hard as these girls has done
-                for the entire world cup is astonishing" -- Carlos Puyol
-              </span>
+              <a class="site-navigator-anchor" href="/soccerstory">
+                <h2 class="story-title">
+                  Spain beats England 1-0 in the finals of the world cup
+                </h2>
+                <span class="story-info">The womens world cup is over and Spain stands at the end as
+                  the winner. Carmona scored an early goal for Spain and England
+                  never found a way to turn the tables. "The determination and
+                  dedication to play everyday, as hard as these girls has done
+                  for the entire world cup is astonishing" -- Carlos Puyol
+                </span>
+              </a>
               <div class="author-catagory-info">
                 <span class="catagory-info">
                   <li><a href="/sports.html">Sports</a></li>
@@ -110,16 +118,20 @@
               </figcaption>
             </figure>
           </div>
+
           <div class="main-story-content fourth-story">
             <div class="text-story">
-              <h2 class="story-title">Apples reveals their new VR-headset</h2>
-              <span class="story-info">
-                After years of speculation and delays, Apples Tim Cook has unveiled the new Apple VR-headset.
-                But one question remains, are customers still willing to pay premium prices for Apple products?
-                "It took longer then we expected but we are confident our customers will be more than satisfied with the
-                product"
-                -- Tim Cook.
-              </span>
+              <a class="site-navigator-anchor" href="/applestory">
+                <h2 class="story-title">Apples reveals their new VR-headset</h2>
+                <span class="story-info">
+                  After years of speculation and delays, Apples Tim Cook has unveiled the new Apple VR-headset.
+                  But one question remains, are customers still willing to pay premium prices for Apple products?
+                  "It took longer then we expected but we are confident our customers will be more than satisfied with
+                  the
+                  product"
+                  -- Tim Cook.
+                </span>
+              </a>
               <div class="author-catagory-info">
                 <span class="catagory-info">
                   <li><a href="/tech.html">Tech</a></li>
