--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <div class="site-wrapper">
         <!--MAIN CONTENT-->
         <div class="main-content-wrapper">
+
           <div class="main-story-content first-story">
             <div class="text-story">
               <a class="site-navigator-anchor" href="/ukrainestory">
@@ -73,9 +74,9 @@
                 </h2>
                 <span class="story-info">
                   Potentially the biggest political scandal in the history of
-                  Nicaragua. The Nicaraguan people have taken to the streets to
+                  Nicaragua. <br> The Nicaraguan people have taken to the streets to
                   protest. "It's time for Nicaragua to become the free democracy
-                  its people desire"
+                  its people desire" -- Angry protester
                 </span>
               </a>
               <div class="author-catagory-info">
@@ -99,7 +100,7 @@
                 </h2>
                 <span class="story-info">The womens world cup is over and Spain stands at the end as
                   the winner. Carmona scored an early goal for Spain and England
-                  never found a way to turn the tables. "The determination and
+                  never found a way to turn the tables. <br> "The determination and
                   dedication to play everyday, as hard as these girls has done
                   for the entire world cup is astonishing" -- Carlos Puyol
                 </span>
@@ -124,8 +125,8 @@
               <a class="site-navigator-anchor" href="/applestory">
                 <h2 class="story-title">Apples reveals their new VR-headset</h2>
                 <span class="story-info">
-                  After years of speculation and delays, Apples Tim Cook has unveiled the new Apple VR-headset.
-                  But one question remains, are customers still willing to pay premium prices for Apple products?
+                  After years of speculation and delays, Apples Tim Cook has unveiled the new Apple VR-headset. <br>
+                  But one question remains, are customers still willing to pay premium prices for Apple products? <br>
                   "It took longer then we expected but we are confident our customers will be more than satisfied with
                   the
                   product"
@@ -144,49 +145,88 @@
               <figcaption class="story-caption">Apples new VR-headset</figcaption>
             </figure>
           </div>
+
+          <div class="main-story-content fifth-story">
+            <div class="text-story">
+              <a class="site-navigator-anchor" href="/museumstory">
+                <h2 class="story-title">Record number of people visited the National history museum</h2>
+                <span class="story-info">
+                  This year the American Museum of Natural History has seen an increese in visitors by 14%. <br> A
+                  record
+                  number of tickets for children has been sold already this year. <br>
+                  Museum likely to end the year with red numbers anyway.
+                </span>
+              </a>
+              <div class="author-catagory-info">
+                <span class="catagory-info">
+                  <li><a href="/culture.html">Culture</a></li>
+                </span>
+                <span class="story-author">By: Mark Test</span>
+              </div>
+            </div>
+            <figure class="story-picture">
+              <img src="pictures/museum.jpg" alt="museum">
+              <figcaption class="story-caption">American Museum of Natural History</figcaption>
+            </figure>
+          </div>
+
         </div>
         <!--MAIN CONTENT-->
 
         <!--BREAKING NEWS CONTENT-->
         <div class="breaking-story-wrapper">
-          <div class="braking-story-content">
-            <h3 class="breaking-story-headline">BREAKING NEWS</h3>
+          <h3 class="breaking-story-headline">BREAKING NEWS</h3>
 
-            <div class="breaking-story breaking-first">
-              <div class="breaking-text-wrapper">
-                <h3 class="breaking-story-title">
-                  Duplantis broke his own world record. again..
-                </h3>
-                <p class="breaking-time">10 minutes ago</p>
-              </div>
-              <figure class="breaking-story-picture">
-                <img src="pictures/duplantis.jpg" alt="duplantis" />
-              </figure>
+          <div class="breaking-story breaking-first">
+            <div class="breaking-text-wrapper">
+              <h3 class="breaking-story-title">
+                Duplantis broke his own world record. again..
+              </h3>
+              <p class="breaking-time">10 minutes ago</p>
             </div>
-            <div class="breaking-story breaking-second">
-              <div class="breaking-text-wrapper">
-                <h3 class="breaking-story-title">
-                  Trump charged with 420 counts of fraud
-                </h3>
-                <p class="breaking-time">25 minutes ago</p>
-              </div>
-              <figure class="breaking-story-picture">
-                <img src="pictures/trump.jpg" alt="trump" />
-              </figure>
-            </div>
-            <div class="breaking-story breaking-third">
-              <div class="breaking-text-wrapper">
-                <h3 class="breaking-story-title">
-                  Major discovery by NASA on Mars
-                </h3>
-                <p class="breaking-time">52 minutes ago</p>
-              </div>
-              <figure class="breaking-story-picture">
-                <img src="pictures/Perseverence.jpg" alt="Mars" />
-              </figure>
-            </div>
-            <h3 class="breaking-story-headline">BREAKING NEWS</h3>
+            <figure class="breaking-story-picture">
+              <img src="pictures/duplantis.jpg" alt="duplantis" />
+            </figure>
           </div>
+
+          <div class="breaking-story breaking-second">
+            <div class="breaking-text-wrapper">
+              <h3 class="breaking-story-title">
+                Trump charged with 420 counts of fraud
+              </h3>
+              <p class="breaking-time">25 minutes ago</p>
+            </div>
+            <figure class="breaking-story-picture">
+              <img src="pictures/trump.jpg" alt="trump" />
+            </figure>
+          </div>
+
+          <div class="breaking-story breaking-third">
+            <div class="breaking-text-wrapper">
+              <h3 class="breaking-story-title">
+                Major discovery by NASA on Mars
+              </h3>
+              <p class="breaking-time">52 minutes ago</p>
+            </div>
+            <figure class="breaking-story-picture">
+              <img src="pictures/Perseverence.jpg" alt="Mars" />
+            </figure>
+          </div>
+
+          <div class="breaking-story breaking-third">
+            <div class="breaking-text-wrapper">
+              <h3 class="breaking-story-title">
+                More than 100 killed in Mexico earthquake
+              </h3>
+              <p class="breaking-time">1 hour ago</p>
+            </div>
+            <figure class="rbeaking-story-picture">
+              <img src="pictures/mexicoearthquake.jpg" alt="mexico earthquake">
+            </figure>
+          </div>
+
+          <h3 class="breaking-story-headline">BREAKING NEWS</h3>
+
         </div>
         <!--BREAKING NEWS CONTENT-->
       </div>
@@ -194,10 +234,13 @@
 
     <footer>
       <div class="footer-content-wrapper">
-        <img src="/socialmediaicons/Xicon.png" alt="Xicon">
+        <a href="https://www.x.com">
+          <img src="/socialmediaicons/Xicon.png" alt="Xicon">
+        </a>
         <h1 class="footer-title">World Magazine</h1>
-        <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
-
+        <a href="https://www.facebook.com">
+          <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+        </a>
       </div>
     </footer>
   </div>
