started with individuall article pages

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
           <div class="main-story-content first-story">
             <div class="text-story">
-              <a class="site-navigator-anchor" href="/ukrainestory">
+              <a class="site-navigator-anchor" href="individualstories/ukrainestory.html">
                 <h2 class="story-title">
                   Ukraine keeps getting attacked, Especially in the eastern
                   region.
@@ -68,7 +68,7 @@
 
           <div class="main-story-content second-story">
             <div class="text-story">
-              <a class="site-navigator-anchor" href="/nicaraguastory">
+              <a class="site-navigator-anchor" href="individualstories/nicaraguastory.html">
                 <h2 class="story-title">
                   Suspicion of election fraud in Nicaragua
                 </h2>
@@ -94,7 +94,7 @@
 
           <div class="main-story-content third-story">
             <div class="text-story">
-              <a class="site-navigator-anchor" href="/soccerstory">
+              <a class="site-navigator-anchor" href="individualstories/soccerstory.html">
                 <h2 class="story-title">
                   Spain beats England 1-0 in the finals of the world cup
                 </h2>
@@ -122,7 +122,7 @@
 
           <div class="main-story-content fourth-story">
             <div class="text-story">
-              <a class="site-navigator-anchor" href="/applestory">
+              <a class="site-navigator-anchor" href="/individualstories/applestory.html">
                 <h2 class="story-title">Apples reveals their new VR-headset</h2>
                 <span class="story-info">
                   After years of speculation and delays, Apples Tim Cook has unveiled the new Apple VR-headset. <br>
@@ -148,7 +148,7 @@
 
           <div class="main-story-content fifth-story">
             <div class="text-story">
-              <a class="site-navigator-anchor" href="/museumstory">
+              <a class="site-navigator-anchor" href="individualstories/museumstory.html">
                 <h2 class="story-title">Record number of people visited the National history museum</h2>
                 <span class="story-info">
                   This year the American Museum of Natural History has seen an increese in visitors by 14%. <br> A
@@ -177,53 +177,75 @@
         <div class="breaking-story-wrapper">
           <h3 class="breaking-story-headline">BREAKING NEWS</h3>
 
-          <div class="breaking-story breaking-first">
-            <div class="breaking-text-wrapper">
-              <h3 class="breaking-story-title">
-                Duplantis broke his own world record. again..
-              </h3>
-              <p class="breaking-time">10 minutes ago</p>
+          <a class="site-navigator-anchor" href="individualstories/duplantisstory.html">
+            <div class="breaking-story breaking-first">
+              <div class="breaking-text-wrapper">
+                <h3 class="breaking-story-title">
+                  Duplantis broke his own world record. again..
+                </h3>
+                <p class="breaking-time">10 minutes ago</p>
+              </div>
+              <figure class="breaking-story-picture">
+                <img src="pictures/duplantis.jpg" alt="duplantis" />
+              </figure>
             </div>
-            <figure class="breaking-story-picture">
-              <img src="pictures/duplantis.jpg" alt="duplantis" />
-            </figure>
-          </div>
+          </a>
 
-          <div class="breaking-story breaking-second">
-            <div class="breaking-text-wrapper">
-              <h3 class="breaking-story-title">
-                Trump charged with 420 counts of fraud
-              </h3>
-              <p class="breaking-time">25 minutes ago</p>
+          <a class="site-navigator-anchor" href="individualstories/trumpfraudstory.html">
+            <div class="breaking-story breaking-second">
+              <div class="breaking-text-wrapper">
+                <h3 class="breaking-story-title">
+                  Trump charged with 420 counts of fraud
+                </h3>
+                <p class="breaking-time">25 minutes ago</p>
+              </div>
+              <figure class="breaking-story-picture">
+                <img src="pictures/trump.jpg" alt="trump" />
+              </figure>
             </div>
-            <figure class="breaking-story-picture">
-              <img src="pictures/trump.jpg" alt="trump" />
-            </figure>
-          </div>
+          </a>
 
-          <div class="breaking-story breaking-third">
-            <div class="breaking-text-wrapper">
-              <h3 class="breaking-story-title">
-                Major discovery by NASA on Mars
-              </h3>
-              <p class="breaking-time">52 minutes ago</p>
+          <a class="site-navigator-anchor" href="individualstories/nasamarsstory.html">
+            <div class="breaking-story breaking-third">
+              <div class="breaking-text-wrapper">
+                <h3 class="breaking-story-title">
+                  Major discovery by NASA on Mars
+                </h3>
+                <p class="breaking-time">52 minutes ago</p>
+              </div>
+              <figure class="breaking-story-picture">
+                <img src="pictures/Perseverence.jpg" alt="Mars" />
+              </figure>
             </div>
-            <figure class="breaking-story-picture">
-              <img src="pictures/Perseverence.jpg" alt="Mars" />
-            </figure>
-          </div>
+          </a>
 
-          <div class="breaking-story breaking-third">
-            <div class="breaking-text-wrapper">
-              <h3 class="breaking-story-title">
-                More than 100 killed in Mexico earthquake
-              </h3>
-              <p class="breaking-time">1 hour ago</p>
+          <a class="site-navigator-anchor" href="individualstories/earthquakestory.html">
+            <div class="breaking-story breaking-third">
+              <div class="breaking-text-wrapper">
+                <h3 class="breaking-story-title">
+                  More than 100 killed in Mexico earthquake
+                </h3>
+                <p class="breaking-time">1 hour ago</p>
+              </div>
+              <figure class="breaking-story-picture">
+                <img src="pictures/mexicoearthquake.jpg" alt="mexico earthquake">
+              </figure>
             </div>
-            <figure class="rbeaking-story-picture">
-              <img src="pictures/mexicoearthquake.jpg" alt="mexico earthquake">
-            </figure>
-          </div>
+          </a>
+
+          <a class="site-navigator-anchor" href="individualstories/lafirestory.html">
+            <div class="breaking-story breakingfourth">
+              <div class="breaking-text-wrapper">
+                <h3 class="breaking-story-title">
+                  250.000 people evacuated in Los Angeles
+                </h3>
+                <p class="breaking-time">2 hour ago</p>
+              </div>
+              <figure class="breaking-story-picture">
+                <img src="pictures/lafire.jpg" alt="forest fire">
+              </figure>
+            </div>
+          </a>
 
           <h3 class="breaking-story-headline">BREAKING NEWS</h3>
 
